--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
+body {
+  margin: 0;
+}
+.container {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  background-color: papayawhip;
+  color: palevioletred;
+}
+.todo-container {
+  width: 500px;
+  min-height: 500px;
+  background-color: white;
+  border-radius: 40px;
+  padding: 40px;
+}
+.todo-title {
+  font-size: 3rem;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  height: 50px;
 }
-
-.App-link {
-  color: #61dafb;
+.todo-name {
+  background: transparent;
+  border: none;
+  color: palevioletred;
+  cursor: pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-completed {
+  text-decoration: line-through;
+}
+.todo-incomplete {
+  font-weight: bold;
 }
